After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708839 - Compilation warnings
Compilation warnings
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: Paolo Bacchilega
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-26 13:49 UTC by Aleksander Morgado
Modified: 2013-09-27 17:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch. (1.66 KB, patch)
2013-09-26 13:49 UTC, Aleksander Morgado
none Details | Review
Another one. (1.68 KB, patch)
2013-09-26 13:50 UTC, Aleksander Morgado
none Details | Review
Third one (1.34 KB, patch)
2013-09-26 14:02 UTC, Aleksander Morgado
none Details | Review
Forth. (2.29 KB, patch)
2013-09-26 14:12 UTC, Aleksander Morgado
none Details | Review
Fifth, last one. (1.36 KB, patch)
2013-09-26 14:12 UTC, Aleksander Morgado
none Details | Review

Description Aleksander Morgado 2013-09-26 13:49:01 UTC
Got several compilation warnings when compiling file-roller from git master:

  CC       dlg-ask-password.o
dlg-ask-password.c: In function ‘dlg_ask_password__common’:
dlg-ask-password.c:135:5: warning: ‘old_password’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  if (old_password != NULL) {
     ^
dlg-ask-password.c:129:11: warning: ‘file’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  filename = _g_file_get_display_basename (file);
           ^
  CC       fr-command-ace.o
fr-command-ace.c: In function ‘process_line’:
fr-command-ace.c:135:20: warning: ‘field_name’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  if (field_name[0] != '/') {
                    ^
fr-command-ace.c:122:40: warning: ‘fields’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  if ((fields == NULL) || (fields[0] == NULL) || (g_strv_length (fields) < 5))
                                        ^
  CCLD     file-roller

Attaching patches now.
Comment 1 Aleksander Morgado 2013-09-26 13:49:56 UTC
Created attachment 255834 [details] [review]
Patch.
Comment 2 Aleksander Morgado 2013-09-26 13:50:11 UTC
Created attachment 255835 [details] [review]
Another one.
Comment 3 Aleksander Morgado 2013-09-26 14:02:18 UTC
Created attachment 255836 [details] [review]
Third one
Comment 4 Aleksander Morgado 2013-09-26 14:12:04 UTC
Created attachment 255839 [details] [review]
Forth.
Comment 5 Aleksander Morgado 2013-09-26 14:12:23 UTC
Created attachment 255840 [details] [review]
Fifth, last one.
Comment 6 Paolo Bacchilega 2013-09-27 17:06:57 UTC
Patches pushed to master now, thank you.