password dialog: avoid compiler warnings

'pwd_type' should be either MAIN_ARCHIVE or SECOND_ARCHIVE; so just assert in
the last 'else {}'. This should make sure that the compiler understands that the
code won't keep on at that point, and will skip warning about 'file' and
'old_password' being used uninitialized.

   dlg-ask-password.c: In function ‘dlg_ask_password__common’:
   dlg-ask-password.c:135:5: warning: ‘old_password’ may be used uninitialized in this function [-Wmaybe-uninitialized]
     if (old_password != NULL) {
        ^
   dlg-ask-password.c:129:11: warning: ‘file’ may be used uninitialized in this function [-Wmaybe-uninitialized]
     filename = _g_file_get_display_basename (file);
              ^

https://bugzilla.gnome.org/show_bug.cgi?id=708839